ADD: Latest sandbox versions

--- a/Joel/sandbox_val.ipynb
+++ b/Joel/sandbox_val.ipynb
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "41fecefc",
    "metadata": {},
    "outputs": [
@@ -1126,7 +1126,34 @@
       "76/76 - 13s - 173ms/step - mean_absolute_error: 251.9662 - mean_squared_error: 106155.0078 - r2_score: 0.9985 - loss: 22977.0156 - val_loss: 36489.9922 - learning_rate: 1.0000e-04\n",
       "Epoch 58/100\n",
       "76/76 - 14s - 178ms/step - mean_absolute_error: 259.6261 - mean_squared_error: 109411.3594 - r2_score: 0.9985 - loss: 16732.9414 - val_loss: 38174.8047 - learning_rate: 1.0000e-04\n",
-      "Epoch 59/100\n"
+      "Epoch 59/100\n",
+      "76/76 - 12s - 163ms/step - mean_absolute_error: 244.2303 - mean_squared_error: 103110.7578 - r2_score: 0.9985 - loss: 109548.6094 - val_loss: 38736.5039 - learning_rate: 1.0000e-04\n",
+      "Epoch 60/100\n",
+      "76/76 - 19s - 256ms/step - mean_absolute_error: 246.5661 - mean_squared_error: 103208.8281 - r2_score: 0.9985 - loss: 349601.8438 - val_loss: 38608.8594 - learning_rate: 1.0000e-04\n",
+      "Epoch 61/100\n",
+      "76/76 - 14s - 182ms/step - mean_absolute_error: 245.8313 - mean_squared_error: 103576.1797 - r2_score: 0.9985 - loss: 99900.6016 - val_loss: 38596.5000 - learning_rate: 1.0000e-04\n",
+      "Epoch 62/100\n",
+      "76/76 - 13s - 171ms/step - mean_absolute_error: 241.2424 - mean_squared_error: 102980.1953 - r2_score: 0.9985 - loss: 123550.9375 - val_loss: 39899.2422 - learning_rate: 1.0000e-04\n",
+      "Epoch 63/100\n",
+      "76/76 - 18s - 239ms/step - mean_absolute_error: 248.6437 - mean_squared_error: 103597.6797 - r2_score: 0.9985 - loss: 149436.2656 - val_loss: 35613.7109 - learning_rate: 1.0000e-04\n",
+      "Epoch 64/100\n",
+      "76/76 - 18s - 231ms/step - mean_absolute_error: 246.6467 - mean_squared_error: 103071.6484 - r2_score: 0.9985 - loss: 82011.5547 - val_loss: 35406.6445 - learning_rate: 1.0000e-04\n",
+      "Epoch 65/100\n",
+      "\n",
+      "Epoch 65: ReduceLROnPlateau reducing learning rate to 9.999999019782991e-06.\n",
+      "76/76 - 18s - 240ms/step - mean_absolute_error: 240.9697 - mean_squared_error: 104988.8281 - r2_score: 0.9985 - loss: 115696.0859 - val_loss: 40834.2188 - learning_rate: 1.0000e-04\n",
+      "Epoch 66/100\n",
+      "76/76 - 19s - 256ms/step - mean_absolute_error: 246.0662 - mean_squared_error: 103522.7969 - r2_score: 0.9985 - loss: 92046.7656 - val_loss: 36188.8984 - learning_rate: 1.0000e-05\n",
+      "Epoch 67/100\n",
+      "76/76 - 18s - 234ms/step - mean_absolute_error: 248.5511 - mean_squared_error: 103831.8125 - r2_score: 0.9985 - loss: 183695.4531 - val_loss: 35762.1641 - learning_rate: 1.0000e-05\n",
+      "Epoch 68/100\n",
+      "76/76 - 13s - 173ms/step - mean_absolute_error: 243.8072 - mean_squared_error: 102242.5000 - r2_score: 0.9985 - loss: 220860.1250 - val_loss: 36337.9258 - learning_rate: 1.0000e-05\n",
+      "Epoch 69/100\n",
+      "76/76 - 14s - 182ms/step - mean_absolute_error: 244.3742 - mean_squared_error: 102150.5000 - r2_score: 0.9985 - loss: 95868.6484 - val_loss: 35557.3398 - learning_rate: 1.0000e-05\n",
+      "Epoch 70/100\n",
+      "76/76 - 14s - 180ms/step - mean_absolute_error: 247.3618 - mean_squared_error: 102988.4688 - r2_score: 0.9985 - loss: 260210.8438 - val_loss: 36043.0820 - learning_rate: 1.0000e-05\n",
+      "Epoch 70: early stopping\n",
+      "Restoring model weights from the end of the best epoch: 55.\n"
      ]
     }
    ],
@@ -1232,10 +1259,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dd1c219b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating on test set...\n",
+      "21/21 - 1s - 34ms/step - mean_absolute_error: 294.7548 - mean_squared_error: 143900.9375 - r2_score: 0.9984 - loss: 57632.1484\n",
+      "\n",
+      "Test Loss (MSE): 57632.1484, Test MAE: 294.7548\n",
+      "\n",
+      "Sample predictions for test nodes:\n",
+      "\u001b[1m11/11\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 31ms/step\n",
+      "Node 684: True future_x=18656.0, future_y=-12362.0 | Predicted future_x=18322.5, future_y=-12147.2\n",
+      "Node 685: True future_x=18171.0, future_y=-11549.0 | Predicted future_x=18022.2, future_y=-11483.6\n",
+      "Node 686: True future_x=12779.0, future_y=-7350.0 | Predicted future_x=12806.2, future_y=-7281.3\n",
+      "Node 687: True future_x=9263.0, future_y=1645.0 | Predicted future_x=9479.1, future_y=749.9\n",
+      "Node 688: True future_x=20974.0, future_y=-13035.0 | Predicted future_x=20800.4, future_y=-13002.7\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Evaluating on test set...\")\n",
     "results = gat_model.evaluate(test_dataset, verbose=2)\n",
